2022-02-03 Se agrega enlace de software y hardware con inventario

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -311,10 +311,10 @@
     <Compile Include="Controllers\IT_equipos_checklist_actividadesController.cs" />
     <Compile Include="Controllers\IT_equipos_checklist_categoriasController.cs" />
     <Compile Include="Controllers\IT_extensionesController.cs" />
-    <Compile Include="Controllers\IT_hardware_tipoController.cs" />
     <Compile Include="Controllers\IT_internet_tipoController.cs" />
     <Compile Include="Controllers\IT_inventory_cellular_lineController.cs" />
     <Compile Include="Controllers\IT_inventory_cellular_plansController.cs" />
+    <Compile Include="Controllers\IT_inventory_hardware_typeController.cs" />
     <Compile Include="Controllers\IT_inventory_itemsController.cs" />
     <Compile Include="Controllers\IT_inventory_items_genericosController.cs" />
     <Compile Include="Controllers\IT_inventory_softwareController.cs" />
@@ -326,7 +326,6 @@
     <Compile Include="Controllers\IT_siteController.cs" />
     <Compile Include="Controllers\IT_site_actividadesController.cs" />
     <Compile Include="Controllers\IT_site_checklistController.cs" />
-    <Compile Include="Controllers\IT_software_tipoController.cs" />
     <Compile Include="Controllers\IT_solicitud_usuariosController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\mm_v3Controller.cs" />
@@ -504,9 +503,6 @@
     <Compile Include="Models\IT_equipos_rel_checklist_actividades.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\IT_hardware_tipo.cs">
-      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\IT_internet_tipo.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
@@ -573,9 +569,6 @@
     <Compile Include="Models\IT_site_checklist_rel_actividades.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\IT_software_tipo.cs">
-      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\IT_solicitud_usuarios.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
@@ -626,7 +619,6 @@
     <Compile Include="Models\MetadataModels\IT_siteMetada.cs" />
     <Compile Include="Models\MetadataModels\IT_site_actividadesMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_site_checklistMetadata.cs" />
-    <Compile Include="Models\MetadataModels\IT_software_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\class_v3Metadata.cs" />
     <Compile Include="Models\MetadataModels\currencyMetadata.cs" />
     <Compile Include="Models\MetadataModels\empleadosMetadata.cs" />
@@ -635,7 +627,6 @@
     <Compile Include="Models\MetadataModels\inspeccion_fallasMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_carpetas_redMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_comunicaciones_tipoMetadata.cs" />
-    <Compile Include="Models\MetadataModels\IT_hardware_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_Matriz_requerimientosMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_solicitud_usuariosMetadata.cs" />
     <Compile Include="Models\MetadataModels\mm_v3Metadata.cs" />
@@ -7129,18 +7120,6 @@
     <Content Include="Views\IT_comunicaciones_tipo\Edit.cshtml" />
     <Content Include="Views\IT_comunicaciones_tipo\Enable.cshtml" />
     <Content Include="Views\IT_comunicaciones_tipo\Index.cshtml" />
-    <Content Include="Views\IT_hardware_tipo\Index.cshtml" />
-    <Content Include="Views\IT_hardware_tipo\Enable.cshtml" />
-    <Content Include="Views\IT_hardware_tipo\Edit.cshtml" />
-    <Content Include="Views\IT_hardware_tipo\Disable.cshtml" />
-    <Content Include="Views\IT_hardware_tipo\Details.cshtml" />
-    <Content Include="Views\IT_hardware_tipo\Create.cshtml" />
-    <Content Include="Views\IT_software_tipo\Create.cshtml" />
-    <Content Include="Views\IT_software_tipo\Details.cshtml" />
-    <Content Include="Views\IT_software_tipo\Disable.cshtml" />
-    <Content Include="Views\IT_software_tipo\Edit.cshtml" />
-    <Content Include="Views\IT_software_tipo\Enable.cshtml" />
-    <Content Include="Views\IT_software_tipo\Index.cshtml" />
     <Content Include="Views\IT_internet_tipo\Create.cshtml" />
     <Content Include="Views\IT_internet_tipo\Details.cshtml" />
     <Content Include="Views\IT_internet_tipo\Disable.cshtml" />
@@ -7291,6 +7270,10 @@
     <Content Include="Views\IT_extensiones\Index.cshtml" />
     <Content Include="Views\IT_extensiones\Details.cshtml" />
     <Content Include="Views\IT_extensiones\Edit.cshtml" />
+    <Content Include="Views\IT_inventory_hardware_type\Create.cshtml" />
+    <Content Include="Views\IT_inventory_hardware_type\Details.cshtml" />
+    <Content Include="Views\IT_inventory_hardware_type\Edit.cshtml" />
+    <Content Include="Views\IT_inventory_hardware_type\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
