--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Util\IT_matenimiento_Estatus.cs" />
     <Compile Include="Util\GV_tipo_viaje.cs" />
     <Compile Include="Util\IT_MR_Status.cs" />
+    <Compile Include="Util\IT_MR_tipo.cs" />
     <Compile Include="Util\IT_site_actividad_estatus.cs" />
     <Compile Include="Util\IT_site_checklist_estatus.cs" />
     <Compile Include="Util\IT_solicitud_usuario_Status.cs" />
