2023-02-16 Se agrega modulo para menu comedor.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -358,6 +358,7 @@
     <Compile Include="Controllers\PuestosController.cs" />
     <Compile Include="Controllers\ReportePesadasController.cs" />
     <Compile Include="Controllers\ResponsableBudgetController.cs" />
+    <Compile Include="Controllers\RH_menu_comedorController.cs" />
     <Compile Include="Controllers\RolesAdminController.cs" />
     <Compile Include="Controllers\upgrade_revisionController.cs" />
     <Compile Include="Controllers\UserAdminController.cs" />
@@ -667,6 +668,7 @@
     <Compile Include="Models\MetadataModels\produccion_supervisoresMetadata.cs" />
     <Compile Include="Models\MetadataModels\produccion_turnosMetadata.cs" />
     <Compile Include="Models\MetadataModels\puestoMetadata.cs" />
+    <Compile Include="Models\MetadataModels\RH_menu_comedor_platillosMetadata.cs" />
     <Compile Include="Models\MetadataModels\view_historico_resultadoMetadata.cs" />
     <Compile Include="Models\MetadataModels\view_valores_fiscal_yearMetadata.cs" />
     <Compile Include="Models\mm_v3.cs">
@@ -802,6 +804,9 @@
     <Compile Include="Models\puesto.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RH_menu_comedor_platillos.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\upgrade_check_item.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
@@ -855,6 +860,7 @@
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
     <Content Include="Content\bootstrap-reboot.min.css" />
+    <Content Include="Content\bootstrap-weekpicker.min.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap3_3_7.min.css" />
@@ -7284,6 +7290,10 @@
     <Content Include="Views\IT_equipos_checklist_actividades\Index.cshtml" />
     <Content Include="Views\IT_equipos_checklist_actividades\Disable.cshtml" />
     <Content Include="Views\IT_equipos_checklist_actividades\Enable.cshtml" />
+    <Content Include="Views\RH_menu_comedor\Index.cshtml" />
+    <Content Include="Views\RH_menu_comedor\CargaMenu.cshtml" />
+    <Content Include="Views\RH_menu_comedor\Edit.cshtml" />
+    <Content Include="Views\RH_menu_comedor\DetailsMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
