--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Util\IT_Tipos_Hardware.cs" />
     <Compile Include="Util\MensajesSweetAlert.cs" />
     <Compile Include="Util\Meses.cs" />
+    <Compile Include="Util\NodoOrganigrama.cs" />
     <Compile Include="Util\NotificacionesCorreo.cs" />
     <Compile Include="Util\OT_nivel_urgencia.cs" />
     <Compile Include="Util\OT_Status.cs" />
